--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
         - MYSQL_DATABASE=EDU # TODO: 修改
         - MYSQL_ROOT_PASSWORD=123456 # TODO: 修改
-        - MYSQL_USER=root # TODO: 修改
+        - MYSQL_USER=admin # TODO: 修改
         - MYSQL_PASSWORD=123456 # TODO: 修改
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: always
@@ -62,47 +62,47 @@ services:
     networks:
       - services
 
-  elasticsearch:
-    container_name: es-container
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
-    environment:
-      - xpack.security.enabled=false
-      - "discovery.type=single-node"
-    ports:
-      - 9200:9200
-    networks:
-      - services
+  # elasticsearch:
+  #   container_name: es-container
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
+  #   environment:
+  #     - xpack.security.enabled=false
+  #     - "discovery.type=single-node"
+  #   ports:
+  #     - 9200:9200
+  #   networks:
+  #     - services
 
-  kibana:
-    container_name: kb-container
-    image: docker.elastic.co/kibana/kibana:7.11.0
-    environment:
-      - ELASTICSEARCH_HOSTS=http://es-container:9200
-    depends_on:
-      - elasticsearch
-    ports:
-      - 5601:5601
-    networks:
-      - services
+  # kibana:
+  #   container_name: kb-container
+  #   image: docker.elastic.co/kibana/kibana:7.11.0
+  #   environment:
+  #     - ELASTICSEARCH_HOSTS=http://es-container:9200
+  #   depends_on:
+  #     - elasticsearch
+  #   ports:
+  #     - 5601:5601
+  #   networks:
+  #     - services
 
-  nginx:
-    build: ./nginx
-    ports:
-        - "80:80"
-        - "443:443"
-    expose:
-        - "80"
-    volumes:
-        # - ../front/web/dist:/usr/share/nginx/web # 前端
-        - ./nginx/ssl:/usr/share/nginx/ssl
-        - ./nginx/log:/var/log/nginx
-    links:
-        - web
-    depends_on:
-        - web
-    restart: always
-    networks:
-      - services
+  # nginx:
+  #   build: ./nginx
+  #   ports:
+  #       - "80:80"
+  #       - "443:443"
+  #   expose:
+  #       - "80"
+  #   volumes:
+  #       # - ../front/web/dist:/usr/share/nginx/web # 前端
+  #       - ./nginx/ssl:/usr/share/nginx/ssl
+  #       - ./nginx/log:/var/log/nginx
+  #   links:
+  #       - web
+  #   depends_on:
+  #       - web
+  #   restart: always
+  #   networks:
+  #     - services
 
 
 networks:
