--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,15 @@ services:
     image: mysql
     container_name: ${PROJECT_NAME}-mysql
     expose:
-        - "3306"
+      - "3306"
     ports:
-        - "${MYSQL_PORT}:3306"
+      - "${MYSQL_PORT}:3306"
     volumes:
-        - ./compose/mysql/data:/var/lib/mysql
-        - ./compose/mysql/conf/my.cnf:/etc/mysql/my.cnf
-        - ./compose/mysql/init:/docker-entrypoint-initdb.d/
+      - ./compose/mysql/data:/var/lib/mysql
+      - ./compose/mysql/conf/my.cnf:/etc/mysql/my.cnf
+      - ./compose/mysql/init:/docker-entrypoint-initdb.d/
     environment:
-        - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: always
     networks:
@@ -30,8 +30,8 @@ services:
       - ${MINIO_SERVER_PORT}:9000
       - ${MINIO_WEB_PORT}:9001
     environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     networks:
       - services
 
@@ -39,13 +39,15 @@ services:
     image: docker.io/library/redis:latest
     container_name: ${PROJECT_NAME}-redis
     restart: always
+    expose:
+      - "6379"
     ports:
       - '${REDIS_PORT}:6379'
     volumes:
       - ./compose/redis/data:/data
       - ./compose/redis/conf/redis.conf:/etc/redis/redis.conf
     environment:
-      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     networks:
       - services
@@ -56,9 +58,12 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
       - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
+    expose:
+      - "5672"
+      - "15672"
     ports:
-        - ${RABBITMQ_SERVER_PORT}:5672
-        - ${RABBITMQ_WEB_PORT}:15672
+      - ${RABBITMQ_SERVER_PORT}:5672
+      - ${RABBITMQ_WEB_PORT}:15672
     volumes:
         - ./compose/rabbitmq/data:/bitnami/rabbitmq/mnesia
     networks:
@@ -68,6 +73,8 @@ services:
     container_name: ${PROJECT_NAME}-elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch:8.3.2
     restart: always
+    expose:
+      - "9200"
     environment:
       - xpack.security.enabled=false
       - discovery.type=single-node
